# ascii-reactive-wallpaper

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Log.md  README.md  build-native.sh  build-shaders.sh  install.sh  metadata.json  reference.md  uninstall.sh
contents/config/: main.xml
contents/shaders/: ascii.frag  ascii.frag.qsb  ascii.vert  ascii.vert.qsb  diagnostic.frag  diagnostic.frag.qsb
contents/ui/: AsciiShader.qml  config.qml  main.qml
contents/ui/native/: qmldir
native/: CMakeLists.txt  asciirenderer.cpp  asciirenderer.h  pointerplugin.cpp  pointertracker.cpp  pointertracker.h
